--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -1,6 +1,7 @@
 body{
 
-    margin: 0;
+    margin:0;
+    background-color: orange;
     
     
 }
@@ -14,6 +15,7 @@ body{
 
 li {
     list-style: none;
+    margin-bottom: 20px;
     
     font-size: 2rem;
 }
@@ -26,8 +28,8 @@ p{
 .center{
     width: max-content;
     height: auto;
-    position: relative;
-    left: 36%;
+    
+    margin-left: 35%;
     display: flex;
     justify-content: space-between;
 }
@@ -42,3 +44,10 @@ button{
     justify-content: space-between;
 }
 
+
+ .delete-button{
+     margin-top: 5px;
+     margin-left: 20px;
+
+     
+ }
