--- a/views/home.ejs
+++ b/views/home.ejs
@@ -3,7 +3,7 @@
         
         <title>        <%= title %>   </title>
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/all.css" integrity="sha384-Bfad6CLCknfcloXFOyFnlgtENryhrpZCe29RTifKEixXQZ38WheV+i/6YWSzkz3V" crossorigin="anonymous">
-        <link rel="stylesheet" href="/css/home.css">
+        <link rel="stylesheet" type="text/css" href="/css/home.css">
 
     </head>
     <body>
@@ -21,19 +21,23 @@
                     
                     <li>
                         <div class="contact-detail">
-                            <p> 
+                            <div> 
                                 <i class="fas fa-id-badge"></i>    
                                     <%=i.name %> || <%= i.Phone %>
-                            </p> 
+                            </div>
+                            
+                                
+                            
+                            <div class="delete-button">
+                                <a href="/delete-contact/?id=<%= i._id %>">
+                                    <i class="fas fa-window-close"></i>
+                                </a>
+                            </div>
                                    
                                 
                             
                         </div>
-                        <div class="delete-button">
-                            <a href="/delete-contact/?id=<%= i._id %>">
-                                <i class="fas fa-window-close"></i>
-                            </a>
-                        </div>
+                       
                             <!-- <p> <%=i.Phone %></p> -->
                         
                     </li>
